--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
   </div>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. Coded by <a href="#">Your
-      Name</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. Coded by <a href="#">Mallikarjun</a>.
   </div>
 
   <script>
